# nn2plan

./: CMakeLists.txt  README.md  cudaMappedMemory.h  cudaUtility.h  main.cpp  tensorNet.cpp  tensorNet.h
